Set sane entry costs for parts moved out of start
2 * cost

--- a/GameData/CTTUnmannedStart/MM_UnmannedStart.cfg
+++ b/GameData/CTTUnmannedStart/MM_UnmannedStart.cfg
@@ -28,13 +28,26 @@
 {
 
 	@TechRequired = survivability
+	@entryCost = #$cost$
+	@entryCost *= 2
 }
+
+@PART[parachuteSingle]:NEEDS[CommunityTechTree]
+{
+
+	@TechRequired = survivability
+	@entryCost = #$cost$
+	@entryCost *= 2
+}
+
 
 # Move goo later, when we have chutes
 @PART[GooExperiment]:NEEDS[CommunityTechTree]
 {
 
 	@TechRequired = survivability
+	@entryCost = #$cost$
+	@entryCost *= 2
 }
 
 # Add Telemetry experiment to all probe cores
@@ -55,6 +68,7 @@
 		xmitDataScalar = 1.0
 	
 		# I'm not sure what all these do, but I copied them from the 2HOT.
+		# They do govern whether crew is needed, I know that much.
 		usageReqMaskInternal = 1
 		usageReqMaskExternal = 8
 	}
