Move rigid antenna to start

--- a/GameData/CTTUnmannedStart/MM_UnmannedStart.cfg
+++ b/GameData/CTTUnmannedStart/MM_UnmannedStart.cfg
@@ -40,6 +40,15 @@
 	@entryCost *= 2
 }
 
+# Antenna that works in atmosphere
+@PART[SurfAntenna]:NEEDS[CommunityTechTree]
+{
+
+	@TechRequired = start
+}
+
+
+
 
 # Move goo later, when we have chutes
 @PART[GooExperiment]:NEEDS[CommunityTechTree]
