Move Oscar-B, Spark, and 0.625m decoupler to early game

--- a/GameData/CTTUnmannedStart/MM_UnmannedStart.cfg
+++ b/GameData/CTTUnmannedStart/MM_UnmannedStart.cfg
@@ -105,3 +105,23 @@ EXPERIMENT_DEFINITION
 	}
 }
 
+# Tweak Flight Telemetry transmit time for Kerbalism
+@EXPERIMENT_DEFINITION:HAS[#id[probeTelemetry]]:NEEDS[FeatureScience]:FOR[Kerbalism]      { @dataScale = 10 }
+
+# Move 0.625m rocket parts earlier
+# Oscar-B
+@PART[miniFuelTank]:NEEDS[CommunityTechTree]
+{
+	@TechRequired = basicRocketry
+}
+
+# Spark
+@PART[liquidEngineMini]:NEEDS[CommunityTechTree]
+{
+	@TechRequired = basicRocketry
+}
+
+@PART[Decoupler_0]:NEEDS[CommunityTechTree]
+{
+	@TechRequired = engineering101
+}
