--- a/GameData/CTTUnmannedStart/MM_UnmannedStart.cfg
+++ b/GameData/CTTUnmannedStart/MM_UnmannedStart.cfg
@@ -47,6 +47,11 @@
 	@TechRequired = start
 }
 
+@PART[batteryBankMini]:NEEDS[CommunityTechTree]
+{
+
+	@TechRequired = survivability
+}
 
 
 
@@ -59,60 +64,23 @@
 	@entryCost *= 2
 }
 
-# Add Telemetry experiment to all probe cores
-@PART[*]:HAS[@MODULE[ModuleCommand]]
-{
-	MODULE
-	{
-		name = ModuleScienceExperiment
-		experimentID = probeTelemetry
-		experimentActionName = Collect Flight Telemetry
-		resetActionName = Discard Flight Telemetry
-		reviewActionName = Review Flight Telemetry
-		useStaging = False	
-		useActionGroups = True
-		hideUIwhenUnavailable = False
-		rerunnable = True
-		
-		xmitDataScalar = 1.0
-	
-		# I'm not sure what all these do, but I copied them from the 2HOT.
-		# They do govern whether crew is needed, I know that much.
-		usageReqMaskInternal = 1
-		usageReqMaskExternal = 8
-	}
-}
-
-EXPERIMENT_DEFINITION
-{	
-	id = probeTelemetry
-	title = Flight Telemetry
-	baseValue = 4
-	scienceCap = 4
-	dataScale = 1
-	
-	requireAtmosphere = False
-	situationMask = 63
-	biomeMask = 7
-	
-	RESULTS
-	{
-		default = "The data clearly shows that you need more boosters."
-
-		KerbinSrfLanded = "Is velocity supposed to be 0?"
-	
-		KerbinFlyingLow = "Those are rookie numbers!"
-	}
-}
-
-# Tweak Flight Telemetry transmit time for Kerbalism
-@EXPERIMENT_DEFINITION:HAS[#id[probeTelemetry]]:NEEDS[FeatureScience]:FOR[Kerbalism]      { @dataScale = 10 }
-
 # Move 0.625m rocket parts earlier
 # Oscar-B
 @PART[miniFuelTank]:NEEDS[CommunityTechTree]
 {
 	@TechRequired = basicRocketry
+}
+
+# Ant
+@PART[microEngine]:NEEDS[CommunityTechTree]
+{
+	@TechRequired = basicRocketry
+}
+
+# Spider
+@PART[radialEngineMini]:NEEDS[CommunityTechTree]
+{
+	@TechRequired = generalRocketry
 }
 
 # Spark
@@ -121,7 +89,19 @@ EXPERIMENT_DEFINITION
 	@TechRequired = basicRocketry
 }
 
+# Twitch
+@PART[smallRadialEngine]:NEEDS[CommunityTechTree]
+{
+	@TechRequired = generalRocketry
+}
+
 @PART[Decoupler_0]:NEEDS[CommunityTechTree]
 {
 	@TechRequired = engineering101
 }
+
+@PART[adapterSmallMiniTall]:NEEDS[CommunityTechTree]
+{
+	@TechRequired = engineering101
+}
+
